[workspace]
members = [
    "ports/cef",
    "ports/geckolib",
    "ports/servo",
]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

# [patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

[replace]
"https://github.com/servo/webrender#0.52.0" = { path = '../webrender-alt/webrender/' }
"https://github.com/servo/webrender#webrender_api:0.52.0" = { path = '../webrender-alt/webrender_api' }
